<resources>
    <string name="app_name">NutriHealth</string>
    <string name="loading">Loading...</string>
    <string name="success">Succes</string>

    <!-- Errors -->
    <string name="error_title">Error</string>
    <string name="error_no_input">The field is mandatory</string>
    <string name="error_no_name">Please fill a name</string>
    <string name="error_no_current_weight">Please fill your weight</string>
    <string name="error_no_gender">Please select your gender</string>
    <string name="error_no_height">Plase fill your heigth</string>
    <string name="error_no_age">Plase select your age</string>
    <string name="error_no_activity_type">Please select your physical activities level</string>
    <string name="error_invalid_email">Invalid email adress</string>
    <string name="error_no_password">Please fill the password</string>
    <string name="error_confirmation_pass">Confirmation password does not match</string>
    <string name="try_again">Please try again</string>
    <string name="error_password_length">Password must be at least 6 characters lenght</string>

    <!-- Profile screen -->
    <string name="personal_data">Personal information</string>
    <string name="save_profile">Save</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="height">Heigth(cm)</string>
    <string name="actual_weight">Weigth(kg)</string>
    <string name="choose">Choose</string>
    <string name="edit_profile_pic">Select a photo</string>
    <string name="from_gallery">From gallery</string>
    <string name="take_a_pic">Take a pic</string>
    <string name="every_day_sport">Your everyday activities</string>
    <string name="choose_activities_level">Choose your everyday activities</string>
    <string name="activity_lvl_1">Sedentary work and few other activities</string>
    <string name="activity_lvl_2">Work standing up or light exercise 1\-3 days a week</string>
    <string name="activity_lvl_3">Moderate daily activities or exercises 5\-6 days a week</string>
    <string name="activity_lvl_4">Exercises intensive day by day or intense physical work</string>
    <string name="activity_lvl_5">Extremely exhausting and long exercises</string>
    <string name="lvl_1">Level 1</string>
    <string name="lvl_2">Level 2</string>
    <string name="lvl_3">Level 3</string>
    <string name="lvl_4">Level 4</string>
    <string name="lvl_5">Level 5</string>
    <string name="profile_infos_saved">Your informations were saved</string>

    <!-- Home screen -->
    <string name="edit_info">Edit profile</string>
    <string name="alarms">Alarms</string>
    <string name="profile">Profile</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="ideal_weight">Your recommended weight is</string>
    <string name="weight_to_lose">You have to loose </string>
    <string name="weight_to_gain">You have to gain</string>
    <string name="kcal_per_day">Number of kcal/day are </string>
    <string name="back_to_exit">To exit the application, press again in 3 seconds</string>
    <string name="log_out">Log out</string>

    <!-- Alarms screen -->
    <string name="alarms_title">Alarms</string>
    <string name="alarms_text_1">Now you can keep a balanced diet with meals at fixed hours</string>
    <string name="alarms_text_2">Do not worry about forgetting dinner time</string>
    <string name="alarms_text_3">Set your alarm for breakfast, lunch, dinner and for snacks between meals</string>
    <string name="breakfast">Breakfast</string>
    <string name="first_snack">First snack</string>
    <string name="lunch">Lunch</string>
    <string name="second_snack">Second snack</string>
    <string name="diner">Dinner</string>
    <string name="notification_title">Meal time!</string>
    <string name="notification_text">It\'s time to take a little break and enjoy the meal.</string>
    <string name="notification_water_title"> Do not forget to drink water!</string>
    <string name="notification_water_text"> It\'s time for a glass of water</string>
    <string name="water_reminder">Remind me to drink water!</string>

    <!-- Calories screen -->
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="history">History</string>
    <string name="calories_planner">Calories planner</string>
    <string name="cancel">Cancel</string>
    <string name="calories_number">Number of calories</string>
    <string name="you_have">You can consume</string>
    <string name="you_had">You could have consumed </string>
    <string name="you_exceed">You have exceeded the recommended calories number with</string>
    <string name="no_food">You don\' have any product here</string>
    <string name="search">Search</string>
    <string name="no_product">No product was found</string>

    <!-- Register screen -->
    <string name="register">Register</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Password confirmation</string>
    <string name="login">Login</string>
    <string name="no_account">You don\'t have an account? Sign up now.</string>
    <string name="success_new_account">Your account was successfully created</string>

    <!-- Meal planning screen -->

    <string name="meal_planning"> Meal planning</string>
    <string name="carbogydrate">Carbohydrate (g)</string>
    <string name="protein">Protein (g)</string>
    <string name="sugars">Total lipid - fat (g)</string>
    <string name="nr_carbogydrate">Carbohydrate</string>
    <string name="nr_protein">Protein</string>
    <string name="nr_sugars">Total lipid - fat</string>
    <string name="ok">Ok</string>
    <string name="change_calories">You cand add by yourself the number of calories you want to consume each day</string>
    <string name="add">Add</string>
    <string name="this_prod">This product has</string>
    <string name="kcal_100">kcal per 100g</string>


</resources>
