<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_bg_rounnded_corners">

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/input_container"
            android:layout_margin="@dimen/margin_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup

                android:id="@+id/meal_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/breakfast_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="@color/gray_light"
                    android:text="@string/breakfast"
                    android:textColor="@color/gray_medium" />

                <RadioButton
                    android:id="@+id/first_snack_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="@color/gray_light"
                    android:text="@string/first_snack"
                    android:textColor="@color/gray_medium" />
                <RadioButton
                    android:id="@+id/lunch_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="@color/gray_light"
                    android:text="@string/lunch"
                    android:textColor="@color/gray_medium" />
                <RadioButton
                    android:id="@+id/second_snack_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="@color/gray_light"
                    android:text="@string/second_snack"
                    android:textColor="@color/gray_medium" />
                <RadioButton
                    android:id="@+id/diner_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="@color/gray_light"
                    android:text="@string/diner"
                    android:textColor="@color/gray_medium" />
            </RadioGroup>

            <LinearLayout
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_weight="2"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/product_name_et"
                        fontPath="fonts/Raleway-Medium.ttf"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edittext_height"
                        android:hint="@string/name"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:inputType="textCapSentences"
                        android:textColor="@color/gray_dark"
                        android:textSize="@dimen/text_medium_2" />
                </android.support.design.widget.TextInputLayout>
                <Button
                    android:layout_marginRight="3dp"
                    android:id="@+id/search_button"
                    android:padding="7dp"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:background="@drawable/buttons_bg"
                    android:text="@string/search" />
            </LinearLayout>


            <android.support.v7.widget.RecyclerView
                android:visibility="gone"
                android:id="@+id/products_rv"
                android:layout_width="match_parent"
                android:layout_height="100dp"/>

            <TextView
                android:visibility="gone"
                android:layout_centerInParent="true"
                android:id="@+id/no_product_tv"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/no_product"
                android:textColor="@color/gray_medium"
                android:textSize="@dimen/text_small_2"
                fontPath="fonts/Raleway-Italic.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:visibility="gone"
                android:layout_centerInParent="true"
                android:id="@+id/product_calories_tv"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/no_product"
                android:textColor="@color/gray_medium"
                android:textSize="@dimen/text_small_2"
                fontPath="fonts/Raleway-Medium.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cal_number_et"
                    fontPath="fonts/Raleway-Medium.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edittext_height"
                    android:hint="@string/calories_number"
                    android:inputType="number"
                    android:textColor="@color/gray_dark"
                    android:textSize="@dimen/text_medium_2" />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_below="@+id/input_container"
            android:orientation="horizontal"
            android:id="@+id/buttons_container"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_marginRight="3dp"
                android:id="@+id/cancel_button"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/buttons_bg"
                android:text="@string/cancel" />

            <Button
                android:layout_marginLeft="3dp"
                android:id="@+id/choose_button"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/buttons_bg"
                android:text="@string/choose" />
        </LinearLayout>


    </RelativeLayout>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBar"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</RelativeLayout>