<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_bg_rounnded_corners">


        <TextView
            android:id="@+id/change_tv"
            fontPath="fonts/Raleway-Medium.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/change_calories"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/text_medium_2" />

        <android.support.design.widget.TextInputLayout
            android:layout_below="@+id/change_tv"
            android:id="@+id/number_of_cals"
            android:layout_margin="@dimen/margin_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/cal_number_et"
                fontPath="fonts/Raleway-Medium.ttf"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:hint="@string/calories_number"
                android:inputType="number"
                android:textColor="@color/gray_dark"
                android:textSize="@dimen/text_medium_2" />
        </android.support.design.widget.TextInputLayout>



        <LinearLayout
            android:layout_below="@+id/number_of_cals"
            android:orientation="horizontal"
            android:id="@+id/buttons_container"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_marginRight="3dp"
                android:id="@+id/cancel_button"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/buttons_bg"
                android:text="@string/cancel" />

            <Button
                android:layout_marginLeft="3dp"
                android:id="@+id/choose_button"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/buttons_bg"
                android:text="@string/add" />
        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>